# price-checker-extension

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
front-end/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
front-end/public/: manifest.json
front-end/scripts/: generate-icons.mjs
front-end/src/: App.tsx  background.ts  content-script.ts  index.css
front-end/src/components/: currency-selector.tsx  floating-card.tsx  tab-section.tsx
front-end/src/components/icons/: delete.tsx  link.tsx  motorcycle.tsx  search.tsx  x.tsx
front-end/src/components/items/: alert-item.tsx  all-item.tsx  tracked-item.tsx
front-end/src/components/tabs/: alerts-tabs.tsx  all-tabs.tsx  spinner.tsx  tracked-tabs.tsx
front-end/src/components/ui/: tabs.tsx
front-end/src/context/: compare-context.tsx
front-end/src/data/: data.ts
front-end/src/extractors/: amazon.ts  ebay.ts  index.ts  jumia.ts  konga.ts  utils.ts
front-end/src/hooks/: usePriceComparison.ts  useTrackedProducts.ts
front-end/src/type/: item.ts
front-end/src/utils/: currency.ts  storage.ts
migrations/: 20250101000001_create_price_history.sql  20250101000002_create_api_metrics.sql  20250101000003_create_scraper_status.sql  20250118000004_add_currency_fields.sql
observability/: prometheus.yml
observability/grafana/dashboards/: dashboard.yml  price-checker-dashboard.json
observability/grafana/datasources/: prometheus.yml
src/: cache.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  utils.rs
src/observability/: metrics.rs  middleware.rs  mod.rs  tracing_setup.rs
src/services/: amazon.rs  currency.rs  ebay.rs  jumia.rs  konga.rs  matching.rs  mock.rs  mod.rs  zenrows.rs
