[package]
name = "price-checker-extension"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.5"
axum-prometheus = "0.3.0"
chrono = {version = "0.4.38", features = ["serde"]}
config = "0.15.17"
dotenvy = "0.15.7"
futures = "0.3.31"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.14.0"
# opentelemetry = {version = "0.24.0", features = ["rt-tokio-runtime"]}
# opentelemetry_sdk = {version = "0.24.0", features = ["rt-tokio-runtime"]}
# opentelemetry-otlp = {version = "0.11.0", features = ["http-proto", "reqwest-client"]}
deadpool-redis = {version = "0.22.0", features = ["rt_tokio_1"]}
redis = {version = "0.32.6", features = ["tokio-rustls-comp"]}
rustls = {version = "0.23"}
base64 = "0.22.1"
rand = "0.8.5"
reqwest = {version = "0.12.9", features = ["json"]}
rust_decimal = {version = "1.36.1", features = ["serde"]}
urlencoding = "2.1.3"
scraper = "0.22.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sha2 = "0.10.8"
sqlx = {version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "rust_decimal", "macros", "uuid", "json", "migrate"], default-features = false}
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.1"
tower-http = {version = "0.6.2", features = ["cors", "trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "json"]}
# tracing-opentelemetry = "0.24.0"
uuid = {version = "1.10.0", features = ["v4", "serde"]}
chromiumoxide = "0.7.0"

[dev-dependencies]
httpmock = "0.8.0"
mockito = "1.6.1"
