[package]
name = "price-checker-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
# Observability - Metrics & Monitoring
metrics = "0.24.0"
metrics-exporter-prometheus = "0.14.0"
rand = "0.8.5"
redis = { version = "0.32.6", features = ["tokio-rustls-comp"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "json",
  "rustls-tls"
] }
rust_decimal = { version = "1.36.1", features = ["serde"] }
rustls = { version = "0.23", features = ["ring"] }
scraper = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.8"
sqlx = { version = "0.8.6", default-features = false, features = [
  "chrono",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-native-tls",
  "rust_decimal",
  "uuid"
] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
httpmock = "0.8.0"
mockito = "1.6.1"
